# test_Manaraga.ai

./: .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  jinja.py
app/services/: flight_api.py  llm_service.py
app/templates/: index.html
nginx/: nginx.conf
